--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ footer a:hover {
                 <div class="tool-icon">📝</div>
                 <h3>PDF to Word</h3>
                 <p>Convert PDF files to editable Word documents</p>
-                <a href="#">Use Tool</a>
+                <a href="pdf-to-word.html">Use Tool</a>
             </div>
             <div class="tool-card">
                 <div class="tool-icon">📄</div>
