--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -1,26 +1,246 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>PDF to Word Converter – Multi PDF Tool</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<style>
+/* ===== GLOBAL DARK THEME ===== */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #1e1e2f;
+    color: #eaeaea;
+}
 
-Create a PDF to word Converter Tool for my Multi PDF Tool website . The tool should allow users to upload PDF file , choose an output format, and download the converted pdf while also displaying a preview of the output.
+.container {
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 25px;
+    background: #2b2d42;
+    border-radius: 12px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+}
 
+h1 {
+    text-align: center;
+    color: #ffd700;
+    margin-bottom: 10px;
+}
 
-Functional Requirements:
+p {
+    text-align: center;
+    color: #ccc;
+}
 
-PDF file Upload:
+/* ===== UPLOAD AREA ===== */
+.upload-box {
+    border: 2px dashed #3a3d5b;
+    padding: 30px;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 25px;
+}
 
+.upload-box input {
+    display: none;
+}
 
-Users should be able to upload PDF  using a file input field.
+.upload-label {
+    display: inline-block;
+    padding: 12px 20px;
+    background: #3a3d5b;
+    color: #ffd700;
+    border-radius: 6px;
+    cursor: pointer;
+}
 
-Supported input formats: PDF ,PNG, JPG, JPEG, BMP, GIF, TIFF, and WEBP.
+/* ===== CONTROLS ===== */
+.controls {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+}
 
-Format Selection:
+select, button {
+    padding: 12px;
+    border-radius: 6px;
+    border: none;
+    font-size: 16px;
+}
 
+select {
+    background: #1e1e2f;
+    color: #fff;
+}
 
-Provide a dropdown or button-based selection for output formats such as PDF, PNG, JPG, JPEG, BMP, GIF, WEBP, and TIFF.
+button {
+    background: #ffd700;
+    cursor: pointer;
+    font-weight: bold;
+}
 
-Processing Status:
+button:hover {
+    opacity: 0.9;
+}
 
+/* ===== STATUS ===== */
+.status {
+    text-align: center;
+    margin-top: 20px;
+    display: none;
+}
 
-Once a user selects a format and clicks the "Convert" button, a loading indicator or "Processing pdf..." message should appear.
+/* ===== PREVIEW ===== */
+.preview {
+    margin-top: 30px;
+    display: none;
+}
 
-…
+.preview iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 8px;
+    border: none;
+}
+
+/* ===== DOWNLOAD ===== */
+.download {
+    text-align: center;
+    margin-top: 20px;
+    display: none;
+}
+
+.download a {
+    background: #ffd700;
+    color: #000;
+    padding: 12px 20px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* ===== RESPONSIVE ===== */
+@media (max-width: 600px) {
+    .controls {
+        flex-direction: column;
+    }
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+    <h1>PDF to Word Converter</h1>
+    <p>Convert PDF files to Word documents online</p>
+
+    <!-- Upload -->
+    <div class="upload-box">
+        <label class="upload-label">
+            Select File
+            <input type="file" id="fileInput"
+                accept=".pdf,.png,.jpg,.jpeg,.bmp,.gif,.tiff,.webp">
+        </label>
+        <div id="fileName"></div>
+    </div>
+
+    <!-- Controls -->
+    <div class="controls">
+        <select id="outputFormat">
+            <option value="docx">Word (DOCX)</option>
+            <option value="pdf">PDF</option>
+            <option value="png">PNG</option>
+            <option value="jpg">JPG</option>
+            <option value="webp">WEBP</option>
+            <option value="tiff">TIFF</option>
+        </select>
+        <button onclick="convertFile()">Convert</button>
+    </div>
+
+    <!-- Status -->
+    <div class="status" id="status">Processing file...</div>
+
+    <!-- Preview -->
+    <div class="preview" id="preview">
+        <iframe id="previewFrame"></iframe>
+    </div>
+
+    <!-- Download -->
+    <div class="download" id="download">
+        <a id="downloadLink" download>Download File</a>
+    </div>
+</div>
+
+<script>
+const fileInput = document.getElementById("fileInput");
+const fileName = document.getElementById("fileName");
+const status = document.getElementById("status");
+const preview = document.getElementById("preview");
+const previewFrame = document.getElementById("previewFrame");
+const downloadBox = document.getElementById("download");
+const downloadLink = document.getElementById("downloadLink");
+
+fileInput.addEventListener("change", () => {
+    if (fileInput.files.length > 0) {
+        fileName.innerText = "Selected: " + fileInput.files[0].name;
+    }
+});
+
+function convertFile() {
+    const file = fileInput.files[0];
+    const format = document.getElementById("outputFormat").value;
+
+    if (!file) {
+        alert("Please select a file first.");
+        return;
+    }
+
+    status.style.display = "block";
+    status.innerText = "Processing file...";
+    preview.style.display = "none";
+    downloadBox.style.display = "none";
+
+    /* =============================
+       REAL CONVERSION NEEDS API
+       ============================= */
+
+    // DEMO SIMULATION (Replace with API call)
+    setTimeout(() => {
+        status.innerText = "Conversion complete!";
+
+        // Preview (PDF preview only)
+        if (file.type === "application/pdf") {
+            previewFrame.src = URL.createObjectURL(file);
+            preview.style.display = "block";
+        }
+
+        // Fake download
+        const fakeBlob = new Blob(["Converted file demo"], { type: "application/octet-stream" });
+        const url = URL.createObjectURL(fakeBlob);
+
+        downloadLink.href = url;
+        downloadLink.download = "converted." + format;
+        downloadBox.style.display = "block";
+
+    }, 2500);
+}
+
+/* =============================
+ HOW TO MAKE IT REAL:
+ Use APIs like:
+ - PDF.co
+ - Cloudmersive
+ - Adobe PDF API
+ - iLovePDF API
+
+ Replace setTimeout with fetch() call.
+============================= */
+</script>
+
+</body>
+</html>
 
